<resources>
    <string name="app_name">GPS Recorder &amp; Player</string>
    <string name="universal_cancel">Cancel</string>
    <string name="universal_delete">Delete</string>
    <string name="records_open_source_licenses">Open source licenses</string>
    <string name="records_new_record">New record</string>
    <string name="records_record_gps_positions">Record GPS positions</string>
    <string name="records_delete_prompt">Do you want to delete the selected records?</string>
    <string name="playback_delete_prompt">Do you want to delete this record?</string>
    <string name="record_new_record">%1$s record</string>
    <string name="record_latitude">Latitude</string>
    <string name="record_longitude">Longitude</string>
    <string name="record_altitude">Altitude</string>
    <string name="record_bearing">Bearing</string>
    <string name="record_speed">Speed</string>
    <string name="record_vertical_accuracy">Vertical Accuracy</string>
    <string name="record_bearing_accuracy">Bearing Accuracy</string>
    <string name="record_speed_accuracy">Speed Accuracy</string>
    <string name="record_horizontal_accuracy">Accuracy</string>
    <string name="record_not_available">-</string>
    <string name="record_signal_type">Signal type</string>
    <string name="record_signal_class">Signal class</string>
    <string name="record_signal_strength">Signal strength</string>
    <string name="back_dialog_title">Recording</string>
    <string name="back_dialog_message">Do you want to stop recording?</string>
    <string name="universal_stop">Stop</string>
    <string name="service_playing">Playing</string>
    <string name="service_playing_message">Playing GPS mock location.</string>
    <string name="service_recording">Recording</string>
    <string name="service_recording_message">Recording GPS and cellular data.</string>
    <string name="records_record">Record</string>
    <string name="records_menu">Menu</string>
    <string name="universal_share">Share</string>
    <string name="playback_pseudo_location">Fake location app</string>
    <string name="playback_pseudo_location_description">Before you can play back the record, you need to set
        this app as the fake location app in the developer options.</string>
    <string name="playback_open_dev_settings">Open</string>
    <string name="playback_play_record">Play record</string>
    <string name="playback_play_record_decription">This will play back the locations as a fake location service.</string>
    <string name="record_record_button">Start record</string>
    <string name="record_record_button_description">Press the record button to start recording locations and cellular
        data.</string>
</resources>
