<?xml version="1.0" encoding="utf-8"?>
<GridLayout
    xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="3"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/record_latitude"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/record_longitude"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:text="@string/record_altitude"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:id="@+id/text_latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="48.78232"/>

    <TextView
        android:id="@+id/text_longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="9.17702"/>

    <TextView
        android:id="@+id/text_altitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="247"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginTop="16dp"
        android:text="@string/record_bearing"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginTop="16dp"
        android:text="@string/record_speed"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginTop="16dp"
        android:text="@string/record_vertical_accuracy"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:id="@+id/text_bearing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="15.44"/>

    <TextView
        android:id="@+id/text_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="25.44"/>

    <TextView
        android:id="@+id/text_vertical_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="5.29"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginTop="16dp"
        android:text="@string/record_bearing_accuracy"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginTop="16dp"
        android:text="@string/record_speed_accuracy"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_marginTop="16dp"
        android:text="@string/record_horizontal_accuracy"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>

    <TextView
        android:id="@+id/text_bearing_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="7.17"/>

    <TextView
        android:id="@+id/text_speed_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="8.23"/>

    <TextView
        android:id="@+id/text_accuracy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        tools:text="13.78"/>

</GridLayout>